--- a/Bunea_Denisa_Laborator7.csproj
+++ b/Bunea_Denisa_Laborator7.csproj
@@ -50,11 +50,15 @@
 
 	<ItemGroup>
 	  <PackageReference Include="sqlite-net-sqlcipher" Version="1.8.116" />
+	  <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Compile Update="ListEntryPage.xaml.cs">
 	    <DependentUpon>ListEntryPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="ProductPage.xaml.cs">
+	    <DependentUpon>ProductPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
@@ -66,6 +70,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ProductPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
